#VERSION 0.8.5#

 - changed property $params_assoc from array to config object and added method params() to make easy access to params key name.
   instead of accessing to params with $this->params_assoc['var'], we use now something like this: $this->params()->var.

 - added method __construct() to Peak_Config.

 - fixed a bug in method _exception2table() of class Peak_Controller_Internal_Pkerror.

 - fixed method _filter_alpha() of Peak_Filters_Advanced to support spaces.

 - added property $_global_sanitize and method globalSanitize() in Peak_Filters.

 - added method getRoute() in Peak_Controller_Action.

 - replaced handleAction() method of Peak_Controller_Action for dispatch() and dispatchAction().

 - fixed problem with method redirect() in Peak_Controller_Front when redirecting to an action in the same controller.

 - added class Peak_Controller_Internal_PkError

 - minor fixes to Peak_View_Render_VirtualLayouts

 - splited dispatch() method of Peak_Controller_Front into dispatch(), _dispatchController(), _dispatchControllerAction() and
   _dispatchModule(). Added posibility to inject exception object to error controller with errorDispatch().

 - added class Peak_View_Render_VirtualLayouts

 - fixed Peak_Application_Modules to flush previous bootstrap if modules don't have his own

 - fixed Peak_Application_Modules to load default Peak front controller if modules don't have his own

 - added class Peak_Filters_Data

#VERSION 0.8.4#
 
 - simplified class Peak_Controller_Helper_Validate

 - created Peak_Controller_Helper class and moved there method __call() from Peak_Controller_Helpers

 - added function _autoloadAppBaseCustom() in autoload.php

 - fixed a bug inside method render() in Peak_View_Render_Layout when layout file is specified but do not exists

 - added filter enum to Peak_Filters_Advanced

 - fixed the problem with custom app class autoloading inside autoload.php. To avoid confusion and problems with case-sensitive