@@ -1,5 +1,8 @@
 #VERSION 0.8.5#
 
+ - removed method setRenderEngine() and moved code in engine() method. Use engine() for setting and getting render engine is 
+   instead.
+
  - changed property $params_assoc from array to config object and added method params() to make easy access to params key name.
    instead of accessing to params with $this->params_assoc['var'], we use now something like this: $this->params()->var.
 
